[project]
name = "langchain-groq-lab"
version = "0.1.0"
description = "A hands-on lab for learning LangChain + LangGraph agents on the free Groq API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- Core LangChain / LangGraph ---
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=1.0",
    # --- Groq chat models (free API) ---
    "langchain-groq>=0.3",
    # --- Tools / community integrations ---
    "langchain-community>=0.3",
    "langchain-tavily>=0.2",
    # --- RAG: local embeddings + vector store (Groq has no embeddings API) ---
    "langchain-huggingface>=0.3",
    "sentence-transformers>=3.0",
    "langchain-chroma>=0.2",
    # --- Tracing / utilities ---
    "langsmith>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    # --- Notebooks ---
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlab"]
